fix: changed z-index "Numbers" section (#1000)

--- a/assets/styles/components/_Numbers.scss
+++ b/assets/styles/components/_Numbers.scss
@@ -29,6 +29,10 @@
 			}
 		}
 
+		> .elementor-widget-wrap {
+			z-index: 1;
+		}
+
 		@media (min-width: $breakpoint-tablet) {
 
 			.elementor-inner-section .elementor-row {
